--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ a {
 
 section {
     width: 80.5%;
+    max-width: 80.5%;
     margin: 0 auto;
     border-radius: 20px;
     margin-bottom: 5rem;
@@ -74,6 +75,7 @@ header {
     padding: 20px 60px;
     background-color: var(--secondary-color);
     width: 80.5%;
+    max-width: 80.5%;
     border-radius: 20px;
     z-index: 1000;
     position: fixed;
@@ -98,7 +100,6 @@ header {
 }
 
 .menu-icon {
-
     width: 20px;
     height: 20px;
     display: none;
@@ -374,6 +375,11 @@ footer {
     color: var(--secondary-color);
 }
 
+.home-section-button:hover p{
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
+
 .home-section-button:hover .ph-arrow-right{
     color: var(--secondary-color);
 }
@@ -447,6 +453,11 @@ footer {
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.card2 .home-services-card-title::after {
+
+    background-color: var(--secondary-color);
 }
 
 .hsct1 {
@@ -620,6 +631,238 @@ footer {
     gap: 2.7rem;
 }
 
+.about-hero{
+    display: flex;
+    justify-content: center;
+    height: auto;
+    background-color: var(--primary-color);
+    width: 80.5%;
+    margin-top: 8rem;
+}
+
+.about-hero-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-hero-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    width: 60%;
+    padding: var(--fifty-pixel-font-size);
+    gap: 2rem;
+}
+
+.about-hero-text-header {
+    font-family: 'Yeseva One', sans-serif;
+    font-size: var(--fifty-pixel-font-size);
+    color: var(--secondary-color);
+    text-align: left;
+    align-self: flex-start;
+    width: 70%;
+    letter-spacing: -2px;
+    word-spacing: 0.05rem; 
+    line-height: 1.1;
+}
+
+.about-hero-text p{
+    color: var(--secondary-color);
+    text-align: justify;
+    line-height: 1.5;
+    font-weight: 100;
+    letter-spacing: -0.5px;
+    align-self: flex-start;
+}
+
+.about-hero-image  {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: var(--fifty-pixel-font-size);
+}
+
+.about-hero-image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+
+.about-ending {
+    display: flex;
+    justify-content: center;
+    height: 74vh;
+    background-color: var(--primary-color);
+    width: 80.5%;
+}
+
+.about-ending-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-ending-text {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 60%;
+    padding: var(--fifty-pixel-font-size);
+    gap: 2rem;
+}
+
+.about-ending-text p{
+    color: var(--secondary-color);
+    text-align: justify;
+    line-height: 1.5;
+    font-weight: 100;
+    letter-spacing: -0.5px;
+    align-self: flex-start;
+}
+
+.about-ending-image  {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: var(--fifty-pixel-font-size);
+}
+
+.about-ending-image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.skills-hero {
+    display: flex;
+    justify-content: center;
+    height: auto;
+    width: 80.5%;
+    margin-top: 12rem;
+}
+
+.skills-hero-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    
+    position: sticky;
+}
+
+.skills-text {
+    width: 30%;
+    top: 0; /* Ensures it stays at the top */
+    height: fit-content; 
+    position: sticky;
+}
+
+.skills-text-header {
+    font-family: 'Yeseva One', sans-serif;
+    font-size: var(--fifty-pixel-font-size);
+    color: var(--secondary-color);
+    text-align: left;
+    letter-spacing: -2px;
+    word-spacing: 0.05rem;
+    position: sticky;
+    top: 0; /* Makes sure it sticks at the top */
+    background-color: var(--background-color); /* Prevents transparency issues */
+    padding: 10px 0; /* Adds some spacing */
+    z-index: 100;
+}
+
+.skills-list-item-tool img {
+    height: 40px;
+    width: 40px;
+    vertical-align: middle;
+    object-fit: cover;
+}
+
+.skills-list {
+    width: 70%;
+    background-color: var(--text-color);
+    border-radius: 30px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+
+.skills-list-item {
+    position: sticky;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: var(--fifty-pixel-font-size);
+    width: 100%;
+    gap: var(--fifty-pixel-font-size);
+}
+
+.skills-list-item-1 {
+    background-color: var(--middle-color);
+}
+.skills-list-item-2 {
+    background-color: var(--third-color);
+}
+.skills-list-item-3 {
+    background-color: var(--secondary-color);
+}
+
+.skills-list-item {
+    transition: transform 0.5s ease-in-out;
+}
+
+.skills-list-item:nth-child(1n) {
+    top: 20px;
+  }
+  
+.skills-list-item:nth-child(2n) {
+    top: 40px;
+  }
+  
+.skills-list-item:nth-child(3n) {
+    top: 60px;
+  }
+
+.skills-list-item-header {
+    font-family: 'Yeseva One', sans-serif;
+    font-size: var(--trente-pixel-font-size);
+    color: var(--text-color);
+    text-align: left;
+    align-self: flex-start;
+    width: 70%;
+    letter-spacing: -2px;
+    word-spacing: 0.05rem; 
+}
+
+.skills-list-item-tools {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: var(--fifty-pixel-font-size);
+}
+
+.skills-list-item-tool {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.skills-list-item-tool p {
+    justify-content: center;
+    color: var(--text-color);
+}
 
 @media (max-width: 955px) {
     .header-main nav{
@@ -632,11 +875,4 @@ footer {
     
 }
 
-@media (min-width: 300px) {
- section {
-        width: 98%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
 
