--- a/css/style.css
+++ b/css/style.css
@@ -1273,6 +1273,7 @@ footer {
     flex-direction: column;
     margin-top: 9rem;
     gap: 2.7rem;
+    height: 25vh;
 }
 
 .services-hero-header {
