--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@
 
 @font-face {
     font-family: 'Helvetica';
-    src: url('/fonts/Helvetica.woff2') format('truetype');
+    src: url('./fonts/Helvetica.woff2') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Britney';
-    src: url('/fonts/Britney-Variable.woff2') format('truetype');
+    src: url('./fonts/Britney-Variable.woff2') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
